# mist

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  api.ts  main.tsx  theme.ts  types.ts  utils.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: defaults.rs  lib.rs  main.rs  storage.rs  types.rs  utils.rs
src/components/: AboutFooter.tsx  AddMonitorModal.tsx  EditMonitorModal.tsx  MonitorForm.tsx  MonitorTable.tsx  SettingsModal.tsx  StatsGrid.tsx  StatusBar.tsx  TitleBar.tsx
src/hooks/: useMonitors.ts  useMonitors.tsx
